--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,22 +44,29 @@ spring:
     listener:
       simple:
         concurrency: 5
+# 手动ACK 不开启自动ACK模式,目的是防止报错后未正确处理消息丢失 默认 为 none
+        acknowledge-mode: manual
 ## 缓存设置
   cache:
     type: redis
+  servlet:
+    multipart:
+      enabled: true
+      location:
+      file-size-threshold: 0
+      resolve-lazily: false
 
 ## Activiti
 ##  activiti:
 ##        check-process-definitions: false
 
-
 server:
   port: 8900
   servlet:
-    context-path: /dev
+    context-path:
 #公共配置与profiles选择无关
 mybatis:
-  typeAliasesPackage: com.mongodb.mongodemo.model
+  typeAliasesPackage: com.Guoz.model
   mapper-locations: classpath:mapper/*.xml
 # 驼峰命名规范 如：数据库字段是  order_id 那么 实体字段就要写成 orderId
   configuration:
@@ -82,7 +89,7 @@ logging:
 # 主键自增回写方法,默认值MYSQL
 mapper:
   identity: MYSQL
-  mappers: com.mongodb.mongodemo.utils.common.config.BaseDao
+  mappers: tk.mybatis.mapper.common.BaseMapper
   # 设置 insert 和 update 中，是否判断字符串类型!=''
   not-empty: true
   enum-as-simple-type: true
@@ -93,6 +100,28 @@ pagehelper:
   support-methods-arguments: true
   params:
         count: countSql
+# 描述信息
+info:
+  app:
+    author: Guoz
+
+
+# 加载所有的端点/默认只加载了 info / health
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+  endpoint:
+# 可以关闭制定的端点
+    shutdown:
+      enabled: false
+    health:
+      show-details: always
+
+
+
+
 
 
 
