--- a/guoz-framework-commons/pom.xml
+++ b/guoz-framework-commons/pom.xml
@@ -16,6 +16,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
+		<!--redis缓存使用-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
