--- a/guoz-generator/src/main/resources/generator/generator-config.properties
+++ b/guoz-generator/src/main/resources/generator/generator-config.properties
@@ -1,6 +1,6 @@
 # \u6570\u636E\u5E93\u914D\u7F6E
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=true
+jdbc.url=jdbc:mysql://localhost:3306/battcn-plus?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=true
 jdbc.user=root
 jdbc.password=1234
 
