--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,14 @@
 				<version>${slf4j-api.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<version>1.3.170</version>
+			</dependency>
+			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.2.3</version>
+				<version>1.1.11</version>
 			</dependency>
 
 			<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
@@ -117,6 +122,8 @@
 				<artifactId>httpcore</artifactId>
 				<version>${httpcore.version}</version>
 			</dependency>
+
+
 
 		</dependencies>
 	</dependencyManagement>
