--- a/guoz-management/src/main/resources/application.yml
+++ b/guoz-management/src/main/resources/application.yml
@@ -85,8 +85,8 @@ mybatis:
 ##通用Mapper
 # 主键自增回写方法,默认值MYSQL
 
-#logging:
-#  config: classpath:springboot-log.xml
+logging:
+  config: classpath:springboot-log.xml
 #  level:
                   #    root: INFO
                   #    org.springframework.web: DEBUG
