--- a/guoz-management/pom.xml
+++ b/guoz-management/pom.xml
@@ -142,13 +142,18 @@
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
-			<version>2.0.1.BUILD-SNAPSHOT</version>
+			<version>2.0.2.RELEASE</version>
 		</dependency>
 		<!--redis缓存使用-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-			<version>2.0.1.BUILD-SNAPSHOT</version>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.crazycake</groupId>
+			<artifactId>shiro-redis</artifactId>
+			<version>2.4.2.1-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.activiti</groupId>
@@ -163,9 +168,11 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 		</dependency>
-
-
-
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.1.17</version>
+		</dependency>
 
 	</dependencies>
 
