--- a/guoz-management/pom.xml
+++ b/guoz-management/pom.xml
@@ -167,6 +167,11 @@
 			<artifactId>hutool-all</artifactId>
 			<version>4.1.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 	</dependencies>
 
