--- a/guoz-management/pom.xml
+++ b/guoz-management/pom.xml
@@ -48,6 +48,11 @@
 			<version>2.5.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.Guoz</groupId>
+			<artifactId>guoz-dubbo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.4.0</version>
@@ -171,6 +176,15 @@
 			<groupId>org.redisson</groupId>
 			<artifactId>redisson</artifactId>
 			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.spring.boot</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
 		</dependency>
 
 	</dependencies>
