--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 		<module>guoz-generator</module>
 		<module>guoz-framework-commons</module>
 		<module>guoz-framework-mybatis</module>
+		<module>guoz-dubbo</module>
 	</modules>
 
 	<properties>
@@ -127,9 +128,11 @@
 				<artifactId>spring-boot-devtools</artifactId>
 				<optional>true</optional>
 			</dependency>
-
-
-
+			<dependency>
+				<groupId>com.alibaba.spring.boot</groupId>
+				<artifactId>dubbo-spring-boot-starter</artifactId>
+				<version>2.0.0</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
