--- a/guoz-management/src/main/resources/application.yml
+++ b/guoz-management/src/main/resources/application.yml
@@ -17,11 +17,11 @@ spring:
   ## Redis数据库索引（默认为0）
     database: 0
     ## Redis服务器地址
-    host: 111.230.224.112
+    host: 127.0.0.1
     ## Redis服务器连接端口
     port: 6379
     ## Redis服务器连接端口
-    password: Wang12369.
+    password:
     lettuce:
       pool:
         max-active: 8
@@ -83,7 +83,7 @@ spring:
 ##        check-process-definitions: false
 
 server:
-  port: 8090
+  port: 8091
   servlet:
     context-path:
 #公共配置与profiles选择无关
@@ -126,6 +126,25 @@ pagehelper:
 info:
   app:
     author: Guoz
+# kafka配置文件
+  kafka:
+      bootstrap-servers: 127.0.0.1:9092
+      producer:
+        group-id:  test1
+        retries: 0
+        batch-size: 16384
+        buffer-memory: 33554432
+        key-serializer: org.apache.kafka.common.serialization.StringSerializer
+        value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      consumer:
+        group-id:  test1
+        auto-commit-interval: 100
+        auto-offset-reset: earliest
+        enable-auto-commit: true
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      listener:
+        concurrency: 3
 
 
 
